--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Ajapaik Sort</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_album">AlbumActivity</string>
+    <string name="title_activity_profile">ProfileActivity</string>
+    <string name="title_activity_photo">PhotoActivity</string>
 </resources>
