--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,11 @@
 <resources>
     <string name="app_name">classify.pics</string>
     <string name="none"></string>
-    <string name="hello_world">Hello world!</string>
+    <string name="action_profile">Profile</string>
+    <string name="action_refresh">Refresh</string>
     <string name="action_settings">Settings</string>
+    <string name="album_label_no_data">No Albums</string>
+    <string name="hello_world">Hello world!</string>
     <string name="title_activity_album">AlbumActivity</string>
     <string name="title_activity_profile">ProfileActivity</string>
     <string name="title_activity_photo">PhotoActivity</string>
