--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,10 +33,10 @@
     <string name="album_title">Album</string>
 
     <!-- Profile -->
-    <plurals name="profile_stats_tagged">
+    <plurals name="profile_stats">
         <item quantity="zero">You haven\'t tagged any pictures yet.</item>
-        <item quantity="one">You have tagged <b>1</b> picture.</item>
-        <item quantity="other">You have tagged <b>%d</b> pictures.</item>
+        <item quantity="one">You have tagged <b>1</b> classification for <b>1</b> picture.</item>
+        <item quantity="other">You have made <b>%1$d</b> classifications for <b>%2$d</b> pictures.</item>
     </plurals>
     <string name="profile_favorites">Favorites:</string>
     <string name="profile_title">My Profile</string>
