Add ACRA integration

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,12 @@
     <string name="action_refresh">Refresh</string>
     <string name="action_settings">Settings</string>
 
+    <!-- ACRA -->
+    <string name="acra_dialog_title">Sift.pics has crashed</string>
+    <string name="acra_dialog_text">An unexpected error occurred forcing the application to stop. Please help us fix this by sending us error data, all you have to do is click OK.</string>
+    <string name="acra_dialog_comment_prompt">You might add your comments about the problem below:</string>
+    <string name="acra_dialog_ok_toast">Thank you!</string>
+
     <!-- Photo tags -->
     <string name="photo_tag_detail">Close-up</string>
     <string name="photo_tag_exterior">Exterior</string>
