--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,7 +59,7 @@
     <string name="profile_language_en">English</string>
     <string name="profile_language_et">Estonian</string>
     <string name="profile_notifications_action">Push Notifications</string>
-    <string name="profile_notifications_hint">Enable/disable push notifications through Google Cloud Messaging</string>
+    <string name="profile_notifications_hint">Keep me updated when new albums are added</string>
     <string name="profile_title">My Profile</string>
 
     <!-- Notifications -->
