--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,8 +48,8 @@
     <string name="favorites_title">Favorites</string>
 
     <!-- Profile -->
+    <string name="zero_tagged">You haven\'t tagged any pictures yet.</string>
     <plurals name="profile_stats">
-        <item quantity="zero">You haven\'t tagged any pictures yet.</item>
         <item quantity="one">You have tagged &lt;b>1&lt;/b> classification for &lt;b>1&lt;/b> picture.</item>
         <item quantity="other">You have made &lt;b>%1$d&lt;/b> classifications for &lt;b>%2$d&lt;/b> pictures.</item>
     </plurals>
